# mcp-secure-server

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENT_PROMPT.md  DX_ANALYSIS.md  LICENSE  PERFORMANCE_ARCHITECTURE_ANALYSIS.md  README.md  REFACTOR_BASELINE_REPORT.md  REFACTOR_COMPLETION_REPORT.md  SECURITY_ANALYSIS.md  coverage.json  knowledge_graph.html  knowledge_graph.mmd  main.py  opencode.json  pyproject.toml  refactor.md
.bugtracker/: bugs.db
.github/workflows/: ci.yml  coderabbit-review.yml
.refactor/20251127-155100/: REFACTOR_ACTION_PLAN.md  REFACTOR_BASELINE_REPORT.md  REFACTOR_COMPLETION_REPORT.md
.refactor/20251127-173920/: REFACTOR_ACTION_PLAN.md  REFACTOR_BASELINE_REPORT.md  REFACTOR_COMPLETION_REPORT.md
.specs/: figma-stories-plugin.md
config/: policy.yaml
docs/: PLUGIN_DEVELOPMENT.md  PROTOCOL.md  SECURITY_POLICY.md
src/: __init__.py  server.py
src/mcp_secure_server/: main.py  server.py
src/mcp_secure_server/plugins/: __init__.py  base.py  bugtracker.py  discovery.py  dispatcher.py  loader.py  websearch.py
src/mcp_secure_server/protocol/: __init__.py  jsonrpc.py  lifecycle.py  tools.py  transport.py
src/mcp_secure_server/security/: __init__.py  engine.py  firewall.py  policy.py  validator.py
src/plugins/: __init__.py  base.py  bugtracker.py  discovery.py  dispatcher.py  loader.py  websearch.py
src/plugins/figma_stories/: __init__.py  ai_client.py  config.py  exceptions.py  figma_client.py  markdown_writer.py  models.py  story_generator.py  templates.py
src/protocol/: __init__.py  jsonrpc.py  lifecycle.py  tools.py  transport.py
src/security/: audit.py  engine.py  firewall.py  ratelimiter.py  validator.py
tests/: __init__.py  conftest.py  test_audit.py  test_bugtracker.py  test_discovery.py  test_engine.py  test_firewall.py  test_integration.py  test_jsonrpc.py  test_lifecycle.py  test_plugins.py  test_policy.py  test_progressive_disclosure.py  test_ratelimiter.py  test_server.py  test_tools.py  test_validator.py  test_websearch.py
